Bootstrap added Some HTML5 tags added to the index.html Started styling, but there is a problem with the postcss. All css-rules get changed, and don't work.

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
   <link rel="icon" type="image/x-icon" href="favicon64.png">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <header>
+    <nav></nav>
+  </header>
+  <main class="container">
+    <app-root>Loading...</app-root>
+  </main>
+  <footer></footer>
 </body>
 </html>
