edit-network-switching-component added

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
   <header>
     <nav></nav>
   </header>
-  <main class="container">
+  <div class="container">
     <app-root>Loading...</app-root>
-  </main>
+  </div>
   <footer></footer>
 </body>
 </html>
