--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,19 @@
   <meta charset="utf-8">
   <title>PortMatrix</title>
   <base href="/">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon64.png">
 </head>
 <body>
   <header>
-    <nav></nav>
+    <div class="container header-container">
+      <img class="logo" src="favicon.svg" alt="header icon" />
+      <h1>Portmatrix</h1>
+    </div>
   </header>
-  <div class="container">
+  <div class="container body-container">
     <app-root>Loading...</app-root>
   </div>
   <footer></footer>
