optimized sorting added stylelint changed favicon to it

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container header-container">
       <img class="logo" src="favicon.svg" alt="header icon" />
-      <h1>Portmatrix</h1>
+      <h1 class="title">Portmatrix</h1>
     </div>
   </header>
   <div class="container body-container">
